conway css improved

--- a/client/src/components/css/intro.css
+++ b/client/src/components/css/intro.css
@@ -4,15 +4,24 @@
 	justify-content: center;
 	display: flex;
 	flex-direction: column;
+	background-color: rgba(35, 35, 35, 0.5);
+	padding: 4%;
+	border-radius: 30px;
+	transition-duration: 0.5s;
+}
+
+.Intro:hover {
+	background-color: rgba(35, 35, 35, 1);
 }
 
 .IntroTitle {
 	font-size: 2.5vw;
-	margin: 0;
+	margin-top: -5vh;
 }
 
 .Summary {
 	margin-top: 1vh;
 	font-size: 1vw;
 	width: 30vw;
+	border-radius: 20px;
 }
