--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,9 +1,8 @@
 .App {
 	text-align: center;
-	width: 99.22vw;
-	height: 500vh;
+	width: 100vw;
+	height: 600vh;
 	background-image: linear-gradient(rgb(31, 31, 31), rgb(75, 75, 75));
-	overflow-x: hidden;
 }
 
 .ProjectContainer {
@@ -13,8 +12,26 @@
 	flex-direction: row;
 }
 
+.Container {
+	display: flex;
+	flex-direction: column;
+	margin-top: -175vh;
+	z-index: 5;
+	align-items: center;
+}
+
 .Title {
+	align-self: center;
+	justify-self: center;
+	width: fit-content;
+	margin: 2vh;
+	z-index: 5;
+	background-color: rgb(35, 35, 35, 0.9);
 	color: white;
 	font-weight: 500;
 	font-size: 2vw;
+	border-width: 5px;
+	border-style: solid;
+	border-color: rgb(35, 35, 35, 0.5);
+	border-radius: 8px;
 }
