--- a/client/src/components/css/MainPage.css
+++ b/client/src/components/css/MainPage.css
@@ -6,10 +6,10 @@
 }
 
 .ProjectContainer {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-direction: row;
+	display: grid;
+	grid-template-columns: auto auto auto;
+	row-gap: 0;
+	column-gap: 0;
 }
 
 .Container {
