--- a/client/src/components/css/project.css
+++ b/client/src/components/css/project.css
@@ -3,8 +3,8 @@
 	flex-direction: column;
 	align-items: flex-start;
 	justify-content: space-evenly;
-	width: 30%;
-	height: 50%;
+	width: 80%;
+	height: fit-content;
 	margin: 3%;
 	border-color: rgb(101, 101, 101);
 	border-radius: 1vw;
