--- a/client/src/components/css/Test.css
+++ b/client/src/components/css/Test.css
@@ -2,7 +2,7 @@
 	display: flex;
 	flex-direction: column;
 	width: 100vw;
-	height: 250vh;
+	height: 150vh;
 	background-color: #121212;
 	justify-content: center;
 	font-family: "Roboto", sans-serif;
@@ -12,7 +12,11 @@
 }
 
 .testText {
-	color: #bdbdbd;
+	width: 50%;
+	align-self: center;
+	margin: 5%;
+	font-size: 150%;
+	color: #ffffff;
 }
 
 .testVideo {
@@ -30,18 +34,30 @@
 }
 
 .testColumnButton {
-	font-size: larger;
-	width: fit-content;
-	height: 15%;
+	background-color: transparent;
+	color: #ff8731;
+	border: 2px solid #ff8731;
+	padding: 10px 20px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	transition-duration: 0.4s;
+	cursor: pointer;
+}
+
+.testColumnButton:hover {
 	background-color: #ff8731;
-	color: #000000;
-	margin: 5%;
+	color: #121212;
 }
 
 .testColumnTitle {
+	font-size: 200%;
 	color: #ffffff;
 }
 .testColumnTextContainer {
+	border-style: solid;
+	border-image: linear-gradient(45deg, #00000000, #ff8731) 1;
 	background-color: #1e1e1e;
 }
 .testColumnTextSubTitle {
