--- a/client/src/components/css/Test.css
+++ b/client/src/components/css/Test.css
@@ -2,24 +2,44 @@
 	display: flex;
 	flex-direction: column;
 	width: 100vw;
-	height: 150vh;
+	height: fit-content;
 	background-color: #121212;
 	justify-content: center;
 	font-family: "Roboto", sans-serif;
 }
 
+.testTitle {
+	color: #ffffff;
+}
+.testMain {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin-bottom: -5%;
+}
 .testTagsContainer {
 }
 
+.testButtonContainer {
+	display: flex;
+	justify-content: right;
+	margin: 3%;
+	padding-right: 10%;
+}
+
 .testText {
-	width: 50%;
+	width: 30%;
+	text-align: left;
 	align-self: center;
 	margin: 5%;
-	font-size: 150%;
+	font-size: 175%;
 	color: #ffffff;
 }
 
 .testVideo {
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 .testColumnContainer {
@@ -35,14 +55,16 @@
 
 .testColumnButton {
 	background-color: transparent;
-	color: #ff8731;
+	color: #ffffff;
 	border: 2px solid #ff8731;
 	padding: 10px 20px;
+	margin: 1%;
 	text-align: center;
 	text-decoration: none;
 	display: inline-block;
-	font-size: 16px;
+	font-size: 200%;
 	transition-duration: 0.4s;
+
 	cursor: pointer;
 }
 
@@ -59,15 +81,20 @@
 	border-style: solid;
 	border-image: linear-gradient(45deg, #00000000, #ff8731) 1;
 	background-color: #1e1e1e;
+	padding-bottom: 2%;
+	padding-left: 2%;
+	padding-right: 2%;
 }
 .testColumnTextSubTitle {
 	color: #ffffff;
-
+	font-size: 150%;
 	font-weight: 900;
 	margin-top: 30px;
 	margin-bottom: 2%;
 }
 
 .testColumnText {
+	text-align: left;
+	font-size: 125%;
 	color: #ffffff;
 }
