--- a/client/src/components/css/Test.css
+++ b/client/src/components/css/Test.css
@@ -32,6 +32,7 @@
 	text-align: left;
 	align-self: center;
 	margin: 5%;
+
 	font-size: 175%;
 	color: #ffffff;
 }
@@ -97,4 +98,33 @@
 	text-align: left;
 	font-size: 125%;
 	color: #ffffff;
+}
+
+@media screen and (max-width: 800px) {
+	/* Your styles go here */
+
+	#YoutubeVideo {
+		width: 70vw;
+		height: 40vw;
+	}
+	.testMain {
+		flex-direction: column;
+	}
+	.testText {
+		width: 70%;
+		font-size: 120%;
+	}
+	.testButtonContainer {
+		justify-content: center;
+		margin: 10%;
+		padding-right: 0%;
+	}
+	.testColumnContainer {
+		flex-direction: column;
+		align-items: center;
+	}
+	.testColumn {
+		margin: 10px;
+		width: 80vw;
+	}
 }
