--- a/client/src/components/css/MainPage.css
+++ b/client/src/components/css/MainPage.css
@@ -1,8 +1,9 @@
 .MainPage {
 	text-align: center;
+	min-height: 100vh;
 	width: 100vw;
-	height: 600vh;
-	background-image: linear-gradient(rgb(31, 31, 31), rgb(75, 75, 75));
+	height: fit-content;
+	background-color: #121212;
 }
 
 .ProjectContainer {
@@ -15,8 +16,6 @@
 .Container {
 	display: flex;
 	flex-direction: column;
-	margin-top: -175vh;
-	z-index: 5;
 	align-items: center;
 }
 
@@ -25,13 +24,17 @@
 	justify-self: center;
 	width: fit-content;
 	margin: 2vh;
-	z-index: 5;
-	background-color: rgb(35, 35, 35, 0.9);
-	color: white;
+	color: #ffffff;
 	font-weight: 500;
-	font-size: 2vw;
-	border-width: 5px;
-	border-style: solid;
-	border-color: rgb(35, 35, 35, 0.5);
+	font-size: 200%;
+	padding: 5px;
 	border-radius: 8px;
+}
+
+@media screen and (max-width: 800px) {
+	.ProjectContainer {
+		display: flex;
+		align-items: center;
+		flex-direction: column;
+	}
 }
