--- a/client/src/components/css/intro.css
+++ b/client/src/components/css/intro.css
@@ -4,24 +4,21 @@
 	justify-content: center;
 	display: flex;
 	flex-direction: column;
-	background-color: rgba(35, 35, 35, 0.5);
-	padding: 4%;
+
+	padding: 1%;
 	border-radius: 30px;
+	margin-top: 2%;
 	transition-duration: 0.5s;
 }
 
-.Intro:hover {
-	background-color: rgba(35, 35, 35, 1);
-}
-
 .IntroTitle {
-	font-size: 2.5vw;
-	margin-top: -5vh;
+	margin-bottom: 2%;
+	font-size: 200%;
 }
 
 .Summary {
 	margin-top: 1vh;
-	font-size: 1vw;
-	width: 30vw;
+	font-size: 100%;
+	width: 70%;
 	border-radius: 20px;
 }
