--- a/client/src/components/css/project.css
+++ b/client/src/components/css/project.css
@@ -7,21 +7,16 @@
 	height: fit-content;
 	margin: 3%;
 	border-color: rgb(101, 101, 101);
-	border-radius: 1vw;
 	border-width: 0.1vw;
 	border-style: solid;
 	color: white;
-	background-color: rgb(50, 50, 50, 0.9);
+	background-color: #1e1e1e;
 	transition-duration: 0.5s;
-}
-
-.project:hover {
-	background-color: rgb(50, 50, 50, 1);
 }
 
 .Columns {
 	width: 100%;
-	height: 90%;
+	height: fit-content;
 	display: flex;
 	flex-direction: row;
 	align-items: flex-start;
@@ -39,7 +34,7 @@
 }
 
 .ProjectTitle {
-	font-size: 3vw;
+	font-size: 200%;
 }
 
 .ProjectImage {
@@ -51,7 +46,7 @@
 }
 
 .ProjectDescription {
-	font-size: 0.85vw;
+	font-size: 80%;
 	margin: 1vh;
 	text-align: left;
 }
@@ -64,9 +59,9 @@
 }
 
 .ProjectButton {
-	width: 10vw;
-	height: 4vh;
-	font-size: 0.75vw;
+	width: 40%;
+	height: 60%;
+	font-size: 90%;
 	margin: 15px;
 	background-color: transparent;
 	color: white;
@@ -99,11 +94,18 @@
 	flex-wrap: wrap;
 }
 .tag {
-	font-size: 0.75vw;
-	margin: 0.2vw;
+	font-size: 90%;
+	padding: 2%;
+	margin: 1%;
 	background-color: transparent;
 	border-width: 1px;
 	border-radius: 5px;
 	border-style: solid;
-	width: 6vw;
+	width: fit-content;
+}
+
+@media screen and (max-width: 800px) {
+	.project {
+		width: 70%;
+	}
 }
