--- a/client/src/components/css/intro.css
+++ b/client/src/components/css/intro.css
@@ -1,24 +1,27 @@
 .Intro {
+	text-align: left;
 	color: white;
-	align-items: center;
+	align-items: self-start;
 	justify-content: center;
 	display: flex;
 	flex-direction: column;
-
-	padding: 1%;
+	padding: 5%;
 	border-radius: 30px;
-	margin-top: 2%;
+	margin: 5%;
+	margin-left: 40%;
 	transition-duration: 0.5s;
 }
 
 .IntroTitle {
 	margin-bottom: 2%;
-	font-size: 200%;
+	font-size: 2.5vw;
+	font-weight: 700;
 }
 
 .Summary {
+	color: #92a0b6;
 	margin-top: 1vh;
-	font-size: 100%;
+	font-size: 1vw;
 	width: 70%;
 	border-radius: 20px;
 }
