Algorithm visualizer Page

--- a/client/src/components/css/MainPage.css
+++ b/client/src/components/css/MainPage.css
@@ -4,18 +4,18 @@
 	align-items: start;
 	justify-content: center;
 	min-height: 100vh;
-	width: 100vw;
 	height: fit-content;
+	width: 100vw;
 	background-color: #0e172e;
 	filter: blur(0px);
 }
 
 @keyframes blurFadeOut {
 	from {
-		filter: blur(0);
+		filter: blur(0) opacity(1);
 	}
 	to {
-		filter: blur(100px);
+		filter: blur(100px) opacity(0);
 	}
 }
 
