--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,7 @@
 .App {
 	text-align: center;
 	width: 100vw;
-	height: 100vh;
-	background-image: linear-gradient(rgb(31, 31, 31), rgb(75, 75, 75));
+	min-height: 100vh;
+	height: 150vh;
+	background-color: #0e172e;
 }
