--- a/client/src/components/css/intro.css
+++ b/client/src/components/css/intro.css
@@ -1,24 +1,29 @@
 .Intro {
+	position: fixed;
+	top: 10%;
+	left: 10%;
 	text-align: left;
 	color: white;
-	align-items: self-start;
+	align-items: start;
 	justify-content: center;
 	display: flex;
 	flex-direction: column;
-	padding: 5%;
 	border-radius: 30px;
-	margin: 5%;
-	margin-left: 40%;
 	transition-duration: 0.5s;
 }
-.Container {
+.IntroContainer {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 }
+
 .IntroCover {
 	align-self: flex-end;
 	animation: swipe 3s ease 1 forwards; /* added the 'forwards' value here */
 	background-color: #0e172e;
-	width: 25vw;
-	margin-right: -0.5vw;
+	width: 50vw;
+	margin-right: 5vw;
 	height: 20vh;
 	margin-top: -20vh;
 }
@@ -47,4 +52,36 @@
 	font-size: 1vw;
 	width: 70%;
 	border-radius: 20px;
+}
+
+@media screen and (max-width: 900px) {
+	.Intro {
+		top: 5%;
+		left: 25%;
+	}
+	.IntroTitle {
+		font-size: 7vw;
+	}
+	.Summary {
+		font-size: 3vw;
+	}
+	@keyframes swipe {
+		0% {
+			width: 100vw;
+		}
+		100% {
+			width: 0vw;
+		}
+	}
+
+	.IntroCover {
+		position: fixed;
+		top: 10%;
+		left: 10%;
+		align-self: flex-end;
+		background-color: #0e172e;
+		width: 100vw;
+		height: 40vh;
+		margin-right: -100vw;
+	}
 }
