--- a/client/src/components/css/project.css
+++ b/client/src/components/css/project.css
@@ -68,7 +68,7 @@
 	border-radius: 3%;
 	margin-top: 3%;
 	width: 100%;
-	height: 50%;
+	height: 90%;
 }
 
 .ProjectDescription {
@@ -97,8 +97,35 @@
 	width: fit-content;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 900px) {
 	.project {
-		width: 70%;
+		width: 100%;
+	}
+	.Columns {
+		text-align: left;
+		flex-direction: column-reverse;
+		align-items: center;
+	}
+
+	.ImageColumn {
+		width: 90%;
+	}
+
+	.InfoColumn {
+		width: 90%;
+	}
+
+	.ProjectTitle {
+		font-size: 5vw;
+	}
+
+	.ProjectDescription {
+		color: #92a0b6;
+		font-size: 4vw;
+		margin: 5%;
+		text-align: left;
+	}
+	.tag {
+		font-size: 3vw;
 	}
 }
